k8s/coding-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coding-service
  namespace: codeinsight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coding-service
  template:
    metadata:
      labels:
        app: coding-service
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: coding-service
          image: 888635225328.dkr.ecr.us-east-1.amazonaws.com/codeinsight-coding-service:latest
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: coding-service
  namespace: codeinsight
spec:
  selector:
    app: coding-service
  ports:
    - port: 5001
      targetPort: 5001
