k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: codeinsight

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:

      imagePullSecrets:
        - name: ecr-secret

      containers:
        - name: frontend

          image: 888635225328.dkr.ecr.us-east-1.amazonaws.com/codeinsight-frontend:latest

          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: codeinsight

spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 5173

  type: NodePort
